# spirit

./: .gitignore  .travis.yml  CHANGELOG.md  Cargo.toml  LICENSE-MIT  README.md  TODO  index.html
.github/workflows/: test.yaml  user_guide.yaml
doc/: settings.html  source-files.js
doc/addr2line/: all.html  fn.demangle.html  fn.demangle_auto.html  index.html  struct.Context.html  struct.Frame.html  struct.FrameIter.html  struct.FunctionName.html  struct.Location.html
doc/adler/: all.html  fn.adler32_slice.html  index.html  struct.Adler32.html
doc/alloc_no_stdlib/: all.html  enum.AllocatorC.html  fn.bzero.html  fn.uninitialized.html  index.html  macro.bind_global_buffers_to_allocator.html  macro.declare_stack_allocator_struct.html  macro.define_allocator_memory_pool.html  macro.define_index_ops.html  macro.define_index_ops_mut.html  macro.define_stack_allocator_traits.html  macro.static_array.html  struct.AllocatedStackMemory.html  struct.CallocBackingStore.html  struct.StackAllocator.html  trait.AllocatedSlice.html  trait.Allocator.html  trait.SliceWrapper.html  trait.SliceWrapperMut.html
doc/alloc_stdlib/: all.html  index.html  struct.AllocatedStackMemory.html  struct.StackAllocator.html  trait.Allocator.html  trait.SliceWrapper.html  trait.SliceWrapperMut.html
doc/arc_swap/: all.html  index.html  sidebar-items.js  struct.ArcSwapAny.html  struct.Guard.html  trait.AsRaw.html  trait.RefCnt.html  type.ArcSwap.html  type.ArcSwapOption.html  type.IndependentArcSwap.html
doc/arrayvec/: all.html  index.html  struct.ArrayString.html  struct.ArrayVec.html  struct.CapacityError.html  struct.Drain.html  struct.IntoIter.html  trait.Array.html
doc/async_compression/: all.html  enum.Level.html  index.html  sidebar-items.js
doc/atomic_refcell/: all.html  index.html  sidebar-items.js  struct.AtomicRef.html  struct.AtomicRefCell.html  struct.AtomicRefMut.html
doc/backtrace/: all.html  enum.BytesOrWideString.html  enum.PrintFmt.html  fn.clear_symbol_cache.html  fn.resolve.html  fn.resolve_frame.html  fn.resolve_frame_unsynchronized.html  fn.resolve_unsynchronized.html  fn.trace.html  fn.trace_unsynchronized.html  index.html  struct.Backtrace.html  struct.BacktraceFmt.html  struct.BacktraceFrame.html  struct.BacktraceFrameFmt.html  struct.BacktraceSymbol.html  struct.Frame.html  struct.Symbol.html  struct.SymbolName.html
doc/base64/: all.html  constant.BCRYPT.html  constant.BINHEX.html  constant.CRYPT.html  constant.IMAP_MUTF7.html  constant.STANDARD.html  constant.STANDARD_NO_PAD.html  constant.URL_SAFE.html  constant.URL_SAFE_NO_PAD.html  enum.CharacterSet.html  enum.DecodeError.html  fn.decode.html  fn.decode_config.html  fn.decode_config_buf.html  fn.decode_config_slice.html  fn.encode.html  fn.encode_config.html  fn.encode_config_buf.html  fn.encode_config_slice.html  index.html  struct.Config.html
doc/brotli/: all.html  constant.VERSION.html  enum.BrotliResult.html  fn.BrotliDecompress.html  fn.BrotliDecompressCustomAlloc.html  fn.BrotliDecompressCustomIo.html  fn.BrotliDecompressCustomIoCustomDict.html  fn.BrotliDecompressStream.html  fn.TransformDictionaryWord.html  fn.copy_from_to.html  index.html  struct.AllocatedStackMemory.html  struct.BrotliState.html  struct.Decompressor.html  struct.DecompressorCustomIo.html  struct.DecompressorWriter.html  struct.DecompressorWriterCustomIo.html  struct.HeapAlloc.html  struct.HuffmanCode.html  struct.IntoIoReader.html  struct.IoReaderWrapper.html  struct.IoWriterWrapper.html  struct.StackAllocator.html  trait.Allocator.html  trait.CustomRead.html  trait.CustomWrite.html  trait.SliceWrapper.html  trait.SliceWrapperMut.html
doc/brotli_decompressor/: all.html  enum.BrotliResult.html  fn.BrotliDecoderHasMoreOutput.html  fn.BrotliDecoderIsFinished.html  fn.BrotliDecoderTakeOutput.html  fn.BrotliDecompress.html  fn.BrotliDecompressCustomAlloc.html  fn.BrotliDecompressCustomDict.html  fn.BrotliDecompressCustomIo.html  fn.BrotliDecompressCustomIoCustomDict.html  fn.BrotliDecompressStream.html  fn.brotli_decode.html  fn.brotli_decode_prealloc.html  fn.bzero.html  fn.copy_from_to.html  index.html  sidebar-items.js  struct.AllocatedStackMemory.html  struct.BrotliDecoderReturnInfo.html  struct.BrotliState.html  struct.HuffmanCode.html  struct.HuffmanTreeGroup.html  struct.StackAllocator.html  struct.StandardAlloc.html  (+3 more)
examples/: hws-complete.rs  hws-tokio.rs  hws.rs  hws.toml
examples/hws-complete/: Cargo.toml
examples/hws-complete/src/: main.rs
spirit-cfg-help/: Cargo.toml
spirit-cfg-help/src/: lib.rs
spirit-cfg-helpers/: Cargo.toml  README.md
spirit-cfg-helpers/src/: lib.rs
spirit-daemonize/: Cargo.toml  README.md
spirit-daemonize/examples/: go_background.rs
spirit-daemonize/src/: lib.rs
spirit-dipstick/: Cargo.toml  README.md
spirit-dipstick/examples/: metrics.rs
spirit-dipstick/src/: lib.rs
spirit-hyper/: Cargo.toml  README.md
spirit-hyper/examples/: hws-hyper.rs  hws.rs
spirit-hyper/src/: lib.rs
spirit-log/: Cargo.toml  README.md
spirit-log/examples/: background.rs  logging.rs
spirit-log/src/: background.rs  lib.rs
spirit-reqwest/: Cargo.toml  README.md
spirit-reqwest/examples/: make_request.rs  make_request_async.rs  make_request_blocking.rs
spirit-reqwest/src/: lib.rs
spirit-reqwest/tests/: version.rs
spirit-tokio/: Cargo.toml  README.md
spirit-tokio/examples/: hw-tokio.rs  hws-tokio.rs  hws.rs  msg_print.rs
spirit-tokio/src/: base_traits.rs  either.rs  handlers.rs  installer.rs  lib.rs  macros.rs  net.rs  runtime.rs  scaled.rs  utils.rs
spirit-tokio/src/net/: limits.rs  mod.rs  unix.rs
src/: app.rs  bodies.rs  cfg_loader.rs  empty.rs  error.rs  extension.rs  fragment.rs  helpers.rs  lib.rs  logging.rs  macro_support.rs  spirit.rs  terminate_guard.rs  tokio_helpers.rs  tutorial.rs  utils.rs  validation.rs
tutopoc/: Cargo.toml
user-guide/: 404.html  advanced.html  book.toml  configuration.html  ecosystem.html  fragments.html  index.html  lifecycle.html  logging.html  metrics.html  overview.html  pipelines.html  print.html  quickstart.html  searchindex.js  searchindex.json
(+11858 files in other folders)
