[package]
name = "spirit"
version = "0.3.8"
authors = ["Michal 'vorner' Vaner <vorner@vorner.cz>"]
description = "Helper to create well behaved daemons with runtime-reconfiguration support"
documentation = "https://docs.rs/spirit"
repository = "https://github.com/vorner/spirit"
readme = "README.md"
categories = ["command-line-interface", "config"]
keywords = ["unix", "daemon", "service", "configuration", "spirit"]
license = "Apache-2.0 OR MIT"
edition = "2018"
include = [
    "Cargo.toml",
    "README.md",
    "src/**",
]

[workspace]
members = [
    "./",
    "spirit-cfg-helpers",
    "spirit-daemonize",
    "spirit-dipstick",
    "spirit-hyper",
    "spirit-log",
    "spirit-reqwest",
    "spirit-tokio",
]

[badges]
travis-ci = { repository = "vorner/spirit" }
maintenance = { status = "actively-developed" }

[features]
default = ["cfg-help", "json", "yaml"]
ini = ["config/ini"]
json = ["config/json"]
hjson = ["config/hjson"]
yaml = ["config/yaml"]
cfg-help = ["structdoc"]

[dependencies]
arc-swap = "~0.4"
config = { version = "~0.9", default-features = false, features = ["toml"], git = "https://github.com/vorner/config-rs", branch = "spirit" }
either = "~1"
failure = "~0.1"
fallible-iterator = "~0.2"
humantime = "~1"
itertools = "~0.8"
libc = "~0.2"
log = "~0.4"
parking_lot = "~0.9"
serde = { version = "~1", features = ["derive"] }
serde_ignored = { version = "~0.1.0" }
serde_path_to_error = "~0.1"
signal-hook = "~0.1.8"
structdoc = { version = "~0.1.3", optional = true }
structopt = "~0.2"
toml = "~0.5"

[dev-dependencies]
hyper = "~0.12"
once_cell = "~0.2"
maplit = "~1"
serde-humantime = "~0.1"
spirit-cfg-helpers = { version = "~0.2", path = "spirit-cfg-helpers" }
spirit-daemonize = { version = "~0.2", path = "spirit-daemonize" }
spirit-hyper = { version = "~0.5", path = "spirit-hyper" }
spirit-log = { version = "~0.2", path = "spirit-log" }
spirit-tokio = { version = "~0.5", path = "spirit-tokio" }
structdoc = "~0.1.3"
version-sync = "~0.8"

# Tests and building is faster with debug turned off and nobody really run a debugger on the
# produced binaries here ever. If it is needed, enable temporarily.
[profile.dev]
debug = false

[profile.test]
debug = false
