[package]
name = "spirit"
version = "0.4.2"
authors = ["Michal 'vorner' Vaner <vorner@vorner.cz>"]
description = "Helper to create well behaved daemons with runtime-reconfiguration support"
documentation = "https://docs.rs/spirit"
repository = "https://github.com/vorner/spirit"
readme = "README.md"
categories = ["command-line-interface", "config"]
keywords = ["unix", "daemon", "service", "configuration", "spirit"]
license = "Apache-2.0 OR MIT"
edition = "2018"
include = [
    "Cargo.toml",
    "README.md",
    "src/**",
]

[workspace]
members = [
    "./",
    "spirit-cfg-helpers",
    "spirit-daemonize",
    "spirit-dipstick",
    "spirit-hyper",
    "spirit-log",
    "spirit-reqwest",
    "spirit-tokio",
]

[badges]
travis-ci = { repository = "vorner/spirit" }
maintenance = { status = "passively-maintained" }

[features]
default = ["cfg-help", "json", "yaml", "suggestions", "color"]
ini = ["config/ini"]
json = ["config/json"]
hjson = ["config/hjson"]
yaml = ["config/yaml"]
cfg-help = ["structdoc"]
suggestions = ["structopt/suggestions"]
color = ["structopt/color"]

[dependencies]
arc-swap = "~0.4"
config = { version = "~0.10.1", default-features = false, features = ["toml"] }
either = "~1"
err-context = "~0.1"
fallible-iterator = "~0.2"
humantime = "~1"
libc = "~0.2"
log = "~0.4"
serde = { version = "~1", features = ["derive"] }
serde_ignored = { version = "~0.1.0" }
serde_path_to_error = "~0.1"
signal-hook = "~0.1.8"
structdoc = { version = "~0.1.3", optional = true }
# Due to a hack, we are using part of API that doesn't have the proper API guarantees. So make sure cargo update doesn't break stuff.
# We should solve it eventually somehow. See the StructOptInternal.
structopt = { version = "=0.3.12", default-features = false }
toml = "~0.5"

[dev-dependencies]
hyper = "~0.12"
once_cell = "~1"
maplit = "~1"
serde-humantime = "~0.1"
spirit-cfg-helpers = { version = "~0.3", path = "spirit-cfg-helpers" }
spirit-daemonize = { version = "~0.3", path = "spirit-daemonize" }
spirit-hyper = { version = "~0.6", path = "spirit-hyper" }
spirit-log = { version = "~0.3", path = "spirit-log" }
spirit-tokio = { version = "~0.6", path = "spirit-tokio" }
structdoc = "~0.1.3"
version-sync = "~0.8"

# Tests and building is faster with debug turned off and nobody really run a debugger on the
# produced binaries here ever. If it is needed, enable temporarily.
[profile.dev]
debug = false

[profile.test]
debug = false
