[package]
name = "spirit-cfg-help"
version = "0.1.0"
authors = ["Michal 'vorner' Vaner <vorner@vorner.cz>"]
edition = "2018"

[dependencies]
failure = "~0.1"
serde = "~1"
serde_json = "~1"
serde_yaml = "~0.8"
spirit = { path = "..", version = "~0.2.9", default-features = false }
structdoc = { git = "https://github.com/vorner/structdoc", default-features = false }
structopt = { version = "~0.2", default-features = false }
toml = "~0.4"
