[package]
name = "spirit-cfg-helpers"
version = "0.2.0"
authors = ["Michal 'vorner' Vaner <vorner@vorner.cz>"]
edition = "2018"
description = "Helpers for spirit to make interacting with configuration more smooth for the user"
documentation = "https://docs.rs/spirit-cfg-helpers"
repository = "https://github.com/vorner/spirit"
license = "Apache-2.0 OR MIT"
categories = ["command-line-interface", "config"]
keywords = ["configuration", "spirit", "ux"]
readme = "README.md"
include = [
    "Cargo.toml",
    "README.md",
    "src/**",
]

[badges]
travis-ci = { repository = "vorner/spirit" }
maintenance = { status = "actively-developed" }

[features]
default = ["cfg-help", "json", "yaml"]
cfg-help = ["spirit/cfg-help", "structdoc"]
json = ["serde_json"]
yaml = ["serde_yaml"]

[dependencies]
arc-swap = "~0.4"
failure = "~0.1"
log = "~0.4"
serde = "~1"
serde_json = { version = "~1", optional = true }
serde_yaml = { version = "~0.8", optional = true }
spirit = { path = "..", version = "~0.3", default-features = false }
structdoc = { version = "~0.1", default-features = false, optional = true }
structopt = { version = "~0.3", default-features = false }
toml = "~0.5"

[dev-dependencies]
once_cell = "~1"
serde_derive = "~1"
version-sync = "~0.8"
