[package]
name = "spirit-daemonize"
version = "0.2.1"
authors = ["Michal 'vorner' Vaner <vorner@vorner.cz>"]
description = "Spirit helpers and config fragments to daemonize"
documentation = "https://docs.rs/spirit-daemonize"
edition = "2018"
repository = "https://github.com/vorner/spirit"
readme = "README.md"
categories = ["config", "os::unix-apis"]
keywords = ["unix", "daemon", "service", "spirit"]
license = "Apache-2.0 OR MIT"
include = [
    "Cargo.toml",
    "README.md",
    "src/**",
]

[badges]
travis-ci = { repository = "vorner/spirit" }
maintenance = { status = "actively-developed" }

[features]
default = ["cfg-help"]
cfg-help = ["spirit/cfg-help", "structdoc"]

[dependencies]
err-context = "~0.1"
log = "~0.4"
nix = "~0.15"
privdrop = "~0.3"
serde = { version = "~1", features = ["derive"] }
spirit = { version = "~0.3", path = "..", default-features = false }
# TODO: Proper versions, feature flag
structdoc = { version = "~0.1", optional = true }
structopt = { version = "~0.3", default-features = false }

[dev-dependencies]
version-sync = "~0.8"
