[package]
name = "spirit-dipstick"
version = "0.2.0"
authors = ["Michal 'vorner' Vaner <vorner@vorner.cz>"]
edition = "2018"
description = "Automatic configuration of dipstick backends"
documentation = "https://docs.rs/spirit-dipstick"
repository = "https://github.com/vorner/spirit"
license = "Apache-2.0 OR MIT"
categories = ["config", "development-tools::profiling"]
keywords = ["dipstick", "metrics", "configuration", "spirit"]
readme = "README.md"
include = [
    "Cargo.toml",
    "README.md",
    "src/**",
]

[badges]
travis-ci = { repository = "vorner/spirit" }
maintenance = { status = "actively-developed" }

[features]
default = ["cfg-help"]
cfg-help = ["spirit/cfg-help", "structdoc"]

[dependencies]
dipstick = { version = "~0.7.9", default-features = false }
err-context = "~0.1"
log = "~0.4"
serde = { version = "~1", features = ["derive"] }
serde-humantime = "~0.1"
spirit = { version = "~0.4.0", path = "..", default-features = false }
structdoc = { version = "~0.1", optional = true }

[dev-dependencies]
version-sync = "~0.8"
env_logger = "~0.7"
