[package]
name = "spirit-hyper"
version = "0.8.1"
authors = ["Michal 'vorner' Vaner <vorner@vorner.cz>"]
description = "Hyper helpers for Spirit"
documentation = "https://docs.rs/spirit-hyper"
repository = "https://github.com/vorner/spirit"
categories = ["config", "web-programming"]
keywords = ["http", "hyper", "service", "configuration", "spirit"]
license = "Apache-2.0 OR MIT"
readme = "README.md"
edition = "2018"
include = [
    "Cargo.toml",
    "README.md",
    "src/**",
]

[badges]
travis-ci = { repository = "vorner/spirit" }
maintenance = { status = "actively-developed" }

[features]
default = ["cfg-help"]
cfg-help = ["spirit/cfg-help", "spirit-tokio/cfg-help", "structdoc"]

[dependencies]
err-context = "^0.1"
hyper = { version = "^0.14", features = ["server", "http1", "http2", "runtime"] }
log = "^0.4"
pin-project = "1"
serde = { version = "^1", features = ["derive"] }
spirit = { path = "..", version = "^0.4.8", default-features = false }
spirit-tokio = { path = "../spirit-tokio", version = "^0.8.1", default-features = false, features = ["net"] }
structdoc = { version = "^0.1", optional = true }
structopt = { version = "^0.3", default-features = false }
tokio = { version = "^1", default-features = false, features = ["rt", "sync"] }

[dev-dependencies]
env_logger = "~0.8"

[package.metadata.docs.rs]
all-features = true
