[package]
name = "spirit-log"
version = "0.2.4"
authors = ["Michal 'vorner' Vaner <vorner@vorner.cz>"]
description = "Spirit helpers and config fragments for logging"
documentation = "https://docs.rs/spirit-log"
repository = "https://github.com/vorner/spirit"
readme = "README.md"
categories = ["config", "development-tools::debugging"]
keywords = ["log", "spirit", "service", "configuration"]
license = "Apache-2.0 OR MIT"
edition = "2018"
include = [
    "Cargo.toml",
    "README.md",
    "src/**",
]

[badges]
travis-ci = { repository = "vorner/spirit" }
maintenance = { status = "actively-developed" }

[features]
background = ["crossbeam-channel", "either", "parking_lot"]
default = ["with-backtrace", "cfg-help"]
with-backtrace = ["log-panics/with-backtrace"]
cfg-help = ["spirit/cfg-help", "structdoc"]

[dependencies]
crossbeam-channel = { version = "~0.3", optional = true }
chrono = "~0.4"
either = { version = "~1", optional = true }
failure = "~0.1"
fern = { version = "~0.5.7", features = ["syslog-4"] }
itertools = "~0.8"
log = "~0.4"
log-panics = "~2"
log-reroute = "~0.1.2"
parking_lot = { version = "~0.9", optional = true }
serde = { version = "~1", features = ["derive"] }
serde_json = "~1"
spirit = { version = "~0.3.1", path = "..", default-features = false }
structdoc = { version = "~0.1", optional = true }
structopt = "~0.2"
syslog = "~4"

[dev-dependencies]
version-sync = "~0.8"

[package.metadata.docs.rs]
all-features = true
