[package]
name = "spirit-log"
version = "0.4.2"
authors = ["Michal 'vorner' Vaner <vorner@vorner.cz>"]
description = "Spirit helpers and config fragments for logging"
documentation = "https://docs.rs/spirit-log"
repository = "https://github.com/vorner/spirit"
readme = "README.md"
categories = ["config", "development-tools::debugging"]
keywords = ["log", "spirit", "service", "configuration"]
license = "Apache-2.0 OR MIT"
edition = "2018"
include = [
    "Cargo.toml",
    "README.md",
    "src/**",
]

[badges]
travis-ci = { repository = "vorner/spirit" }
maintenance = { status = "actively-developed" }

[features]
background = ["flume", "either"]
default = ["with-backtrace", "cfg-help"]
with-backtrace = ["log-panics/with-backtrace"]
cfg-help = ["spirit/cfg-help", "structdoc"]

[dependencies]
chrono = "~0.4"
either = { version = "~1", optional = true }
fern = { version = "~0.6", default-features = false }
flume = { version = "^0.10", optional = true }
itertools = "^0.10"
log = "~0.4"
log-panics = { version = "~2", default-features = false }
log-reroute = "~0.1.2"
serde = { version = "~1", features = ["derive"] }
serde_json = "~1"
spirit = { version = "~0.4.0", path = "..", default-features = false }
structdoc = { version = "~0.1", optional = true }
structopt = { version = "~0.3", default-features = false }
syslog = { version = "~5", optional = true }

[package.metadata.docs.rs]
all-features = true
