[package]
name = "spirit-reqwest"
version = "0.2.2"
authors = ["Michal 'vorner' Vaner <vorner@vorner.cz>"]
edition = "2018"
description = "Reqwest helpers for Spirit"
documentation = "https://docs.rs/spirit-reqwest"
repository = "https://github.com/vorner/spirit"
license = "Apache-2.0 OR MIT"
categories = ["config", "web-programming"]
keywords = ["http", "reqwest", "service", "configuration", "spirit"]
readme = "README.md"
include = [
    "Cargo.toml",
    "README.md",
    "src/**",
]

[badges]
travis-ci = { repository = "vorner/spirit" }
maintenance = { status = "actively-developed" }

[features]
default = ["cfg-help"]
cfg-help = ["spirit/cfg-help", "structdoc"]

[dependencies]
arc-swap = "~0.4"
failure = "~0.1"
humantime = "~1"
log = "~0.4"
parking_lot = "~0.9"
reqwest = "~0.9.12"
serde = { version = "~1", features = ["derive"] }
serde-humantime = "~0.1"
spirit = { version = "~0.3", path = "..", default-features = false }
structdoc = { version = "~0.1", optional = true }
url = "~1.7"
url_serde = "~0.2"

[dev-dependencies]
version-sync = "~0.8"
env_logger = "~0.6"
