[package]
name = "spirit-tokio"
version = "0.6.1"
authors = ["Michal 'vorner' Vaner <vorner@vorner.cz>"]
description = "Tokio helpers for Spirit"
documentation = "https://docs.rs/spirit-tokio"
repository = "https://github.com/vorner/spirit"
license = "Apache-2.0 OR MIT"
readme = "README.md"
categories = ["config", "network-programming"]
keywords = ["async", "tokio", "service", "configuration", "spirit"]
edition = "2018"
include = [
    "Cargo.toml",
    "README.md",
    "src/**",
]

[features]
# TODO: Cut down on the default features a bit
default = ["cfg-help", "rt-from-cfg", "net", "stream"]

cfg-help = ["spirit/cfg-help", "structdoc"]
net = ["humantime", "net2", "tokio/net", "tokio/time"]
rt-from-cfg = ["tokio/rt-threaded", "tokio/time", "tokio/io-driver"]
stream = ["tokio/stream"]

[badges]
travis-ci = { repository = "vorner/spirit" }
maintenance = { status = "actively-developed" }

[dependencies]
err-context = "~0.1"
log = "~0.4"
humantime = { version = "~2", optional = true }
net2 = { version = "~0.2", optional = true }
num_cpus = "~1"
serde = { version = "~1", features = ["derive"] }
spirit = { version = "~0.4.0", path = "..", default-features = false }
structdoc = { version = "~0.1", optional = true }
structopt = { version = "~0.3", default-features = false }

[dependencies.tokio]
# TODO: Make some/all these features optional (maybe default)?
version = "0.2"
default-features = false
features = ["macros", "rt-core", "sync"]

[dev-dependencies]
version-sync = "~0.9"
env_logger = "~0.7"
serde_json = "~1"
