[package]
name = "spirit-tokio"
version = "0.9.2"
authors = ["Michal 'vorner' Vaner <vorner@vorner.cz>"]
description = "Tokio helpers for Spirit"
documentation = "https://docs.rs/spirit-tokio"
repository = "https://github.com/vorner/spirit"
license = "Apache-2.0 OR MIT"
readme = "README.md"
categories = ["config", "network-programming"]
keywords = ["async", "tokio", "service", "configuration", "spirit"]
edition = "2018"
include = [
    "Cargo.toml",
    "README.md",
    "src/**",
]

[features]
# TODO: Cut down on the default features a bit
default = ["cfg-help", "rt-from-cfg", "net", "stream"]

cfg-help = ["spirit/cfg-help", "structdoc"]
multithreaded = ["tokio/rt-multi-thread"]
net = ["humantime", "pin-project", "socket2", "tokio/net", "tokio/time"]
rt-from-cfg = ["multithreaded", "tokio/time", "num_cpus"]
stream = ["tokio-stream"]

futures = ["futures-util"]

[badges]
travis-ci = { repository = "vorner/spirit" }
maintenance = { status = "actively-developed" }

[dependencies]
either = { version = "^1", optional = true }
futures-util = { version = "~0.3", optional = true, default-features = false }
err-context = "^0.1"
log = "^0.4"
humantime = { version = "^2", optional = true }
socket2 = { version = "^0.4", optional = true, features = ["all"] }
num_cpus = { version = "^1", optional = true }
pin-project = { version = "1", optional = true }
serde = { version = "^1", features = ["derive"] }
spirit = { version = "^0.4.6", path = "..", default-features = false }
structdoc = { version = "^0.1", optional = true }
structopt = { version = "^0.3", default-features = false }
tokio = { version = "^1", default-features = false, features = ["macros", "rt", "sync"] }
tokio-stream = { version = "^0.1", optional = true }

[dev-dependencies]
arc-swap = "^1"
env_logger = "~0.9"
serde_json = "^1"
tokio = { version = "^1", features = ["io-util"] }

[package.metadata.docs.rs]
all-features = true
