[package]
name = "hws-complete"
version = "0.1.0"
publish = false
edition = "2018"

[dependencies]
hyper = "~0.12"
log = "~0.4"
serde = { version = "~1", features = ["derive"] }
spirit = { path = "../../" }
spirit-cfg-helpers = { path = "../../spirit-cfg-helpers" }
spirit-daemonize = { path = "../../spirit-daemonize" }
spirit-hyper = { path = "../../spirit-hyper" }
spirit-log = { path = "../../spirit-log" }
spirit-tokio = { path = "../../spirit-tokio" }
structdoc = "~0.1"
structopt = "~0.2"
